# nigel-keeps-your-books

./: .beans.yml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README-RS.md  README.md  pyproject.toml  raygun-bookkeeper-plan.md
.beans/: nigel-c96t--double-entry-accounting-plugin.md  nigel-r3cb--importer-schema-and-registration-mechanism.md  nigel-snfs--k-1-prep-report-plugin.md  nigel-to27--plugin-system-for-extending-nigel.md
.claude/: settings.json
.claude/hooks/: pre-commit-checks.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude-review.yml  release.yml
backlog/: config.yml
backlog/tasks/: task-1 - Invoicing-add-on.md  task-10 - Remove-redundant-pre-filter-in-parse_bofa_card_format.md  task-11 - Stream-detect_bofa_checking-to-match-detect_bofa_credit_card-pattern.md  task-12 - Consider-replacing-Vec-ParsedRow-usize-tuple-with-a-named-ParseResult-struct.md  task-13 - Use-sorted-test-data-in-scroll_to_today-tests-to-match-documented-contract.md  task-14 - Expand-integration-test-coverage-date-filter-errors-register-categories-rules.md  task-15 - Refactor-match_type-from-freeform-String-to-ValueEnum-enum.md  task-16 - Make-categorizer-matches-return-Result-bool-instead-of-silently-returning-false.md  task-17 - New-module-calculator-scratchpad-with-variables-and-editable-history.md  task-18 - New-module-to-do-list-with-repeating-tasks-and-due-date-reminders.md  task-19 - Log-failed-password-attempts-and-surface-in-settings.md  task-2 - Invoicing-Client-management.md  task-20 - Add-optional-TOTP-two-factor-authentication-for-database-password-protection.md  task-21 - Rules-import-bulk-import-categorization-rules-from-CSV.md  task-22 - Add-FAQ-and-documentation-pages-to-the-site.md  task-3 - Invoicing-PDF-invoice-generation.md  task-4 - Invoicing-Email-delivery.md  task-5 - Invoicing-Automatic-Reminders.md  task-6 - Invoicing-Stripe-integration.md  task-7 - Invoicing-Duplicate-existing-invoice.md  task-8 - Invoicing-Create-scheduled-invoices.md  task-9 - Journal-entry-layer-lightweight-double-entry.md
docs/: importers.md  issues.md  skills.md  walkthrough.md
docs/plans/: 2026-02-26-bookkeeper-design.md  2026-02-26-bookkeeper-implementation.md  2026-02-28-dashboard-design.md  2026-02-28-snake-game-design.md  2026-02-28-snake-game-implementation.md  2026-03-01-database-encryption-design.md  2026-03-01-database-encryption-implementation.md  2026-03-02-import-enhancements-design.md  2026-03-02-import-enhancements.md  2026-03-02-rust-decimal.md  2026-03-03-totp-2fa-design.md  2026-03-03-totp-2fa-plan.md
nigel-rs/: Cargo.toml
nigel-rs/src/: categorizer.rs  error.rs  fmt.rs  importer.rs  main.rs  models.rs  reconciler.rs  reports.rs  reviewer.rs  settings.rs
plugins/nigel-bofa/: pyproject.toml
plugins/nigel-bofa/src/nigel_bofa/: checking.py  credit_card.py  line_of_credit.py  plugin.py
plugins/nigel-bofa/tests/: conftest.py  test_checking.py  test_credit_card.py  test_line_of_credit.py
plugins/nigel-bofa/tests/fixtures/: bofa_checking_sample.csv  bofa_credit_card_sample.csv
plugins/nigel-export-pdf/: pyproject.toml
plugins/nigel-export-pdf/src/nigel_export_pdf/: cli.py  plugin.py  renderer.py
plugins/nigel-export-pdf/src/nigel_export_pdf/templates/: balance.html  base.html  cashflow.html  expenses.html  flagged.html  pnl.html  tax.html
plugins/nigel-export-pdf/tests/: test_renderer.py
plugins/nigel-gusto/: pyproject.toml
plugins/nigel-gusto/src/nigel_gusto/: categorizer.py  payroll.py  plugin.py
plugins/nigel-gusto/tests/: test_categorizer.py  test_payroll.py
plugins/nigel-k1/: pyproject.toml
plugins/nigel-k1/src/nigel_k1/: categories.py  cli.py  migrations.py  plugin.py  reports.py
plugins/nigel-k1/tests/: test_k1_migrations.py  test_k1_report.py
scratchpads/: issue-166-totp-2fa.md  issue-32-refactor-bofa-importers.md  issue-34-account-management.md
site/: CNAME  index.html  main.js  styles.css
src/: browser.rs  categorizer.rs  db.rs  effects.rs  error.rs  fmt.rs  importer.rs  main.rs  migrations.rs  models.rs  pdf.rs  reconciler.rs  reports.rs  reviewer.rs  settings.rs  totp.rs  tui.rs
src/bookkeeper/: __init__.py  categorizer.py  cli.py  db.py  importer.py  models.py  reports.py
src/cli/: account_manager.rs  accounts.rs  backup.rs  browse.rs  categories.rs  category_manager.rs  dashboard.rs  demo.rs  export.rs  goodbye.rs  import.rs  import_manager.rs  init.rs  load.rs  load_manager.rs  mod.rs  onboarding.rs  password.rs  password_manager.rs  reconcile.rs  reconcile_manager.rs  report.rs  restore.rs  review.rs  rules.rs  rules_manager.rs  settings_manager.rs  snake.rs  (+5 more)
tests/: cli_dispatch.rs  conftest.py  test_categorizer.py  test_cli.py  test_db.py  test_importer.py  test_plugins.py  test_reconciler.py  test_registry.py  test_reports.py  test_reviewer.py  test_settings.py
(+23 files in other folders)
