[project]
name = "nigel"
version = "0.1.0"
description = "Cash-basis bookkeeping CLI for small consultancies"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "rich>=13",
    "openpyxl>=3.1",
]

[project.scripts]
nigel = "nigel.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nigel"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8",
]
