[project]
name = "nigel-bofa"
version = "0.1.0"
description = "Bank of America importer plugin for Nigel"
requires-python = ">=3.12"
dependencies = ["nigel"]

[tool.uv.sources]
nigel = { path = "../..", editable = true }

[project.entry-points."nigel.plugins"]
bofa = "nigel_bofa.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nigel_bofa"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8"]
