[project]
name = "nigel-export-pdf"
version = "0.1.0"
description = "PDF export plugin for Nigel reports"
requires-python = ">=3.12"
dependencies = ["nigel", "weasyprint>=62", "jinja2>=3.1"]

[project.entry-points."nigel.plugins"]
export_pdf = "nigel_export_pdf.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nigel_export_pdf"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8"]
