[project]
name = "nigel-gusto"
version = "0.1.0"
description = "Gusto payroll importer plugin for Nigel"
requires-python = ">=3.12"
dependencies = ["nigel", "openpyxl>=3.1"]

[tool.uv.sources]
nigel = { path = "../..", editable = true }

[project.entry-points."nigel.plugins"]
gusto = "nigel_gusto.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nigel_gusto"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8", "openpyxl>=3.1"]
