[project]
name = "nigel-k1"
version = "0.1.0"
description = "K-1 prep report plugin for Nigel"
requires-python = ">=3.12"
dependencies = ["nigel"]

[tool.uv.sources]
nigel = { path = "../..", editable = true }

[project.entry-points."nigel.plugins"]
k1_prep = "nigel_k1.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nigel_k1"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8"]
